--- a/python3.6-tensorflow-optimized/Dockerfile
+++ b/python3.6-tensorflow-optimized/Dockerfile
@@ -8,7 +8,13 @@ RUN cd /opt && \
     git checkout tags/$TENSORFLOW_VERSION && \
     tensorflow/tools/ci_build/builds/configured CPU && \
     pip install numpy && \
-    bazel build -c opt //tensorflow/tools/pip_package:build_pip_package && \
+    bazel build -c opt --copt=-mavx \
+                       --copt=-mavx2 \
+                       --copt=-mfma \
+                       --copt=-mfpmath=both \
+                       --copt=-msse4.2 \
+                       --copt=-msse4.1 \
+        //tensorflow/tools/pip_package:build_pip_package && \
     bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg && \
     pip install --upgrade pip && \
     pip install --upgrade /tmp/tensorflow_pkg/tensorflow-*.whl && \
