--- a/python3.6-tensorflow-gpu/Dockerfile
+++ b/python3.6-tensorflow-gpu/Dockerfile
@@ -30,13 +30,7 @@ RUN cd /opt && \
     git checkout tags/$TENSORFLOW_VERSION && \
     tensorflow/tools/ci_build/builds/configured GPU && \
     pip install numpy && \
-    bazel build -c opt --copt=-mavx \
-                       --copt=-mavx2 \
-                       --copt=-mfma \
-                       --copt=-mfpmath=both \
-                       --copt=-msse4.2 \
-                       --copt=-msse4.1 \
-                       --config=cuda \
+    bazel build -c opt --config=cuda \
         //tensorflow/tools/pip_package:build_pip_package && \
     bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg && \
     pip install --upgrade pip && \
