--- a/python3.6-tensorflow-optimized-gpu/Dockerfile
+++ b/python3.6-tensorflow-optimized-gpu/Dockerfile
@@ -1,4 +1,4 @@
-FROM triage/python2.7-bazel-gpu
+FROM triage/python3.6-bazel-gpu
 
 # Fix paths so that CUDNN can be found
 # See https://github.com/tensorflow/tensorflow/issues/8264
@@ -18,23 +18,28 @@ RUN git clone https://github.com/NVIDIA/nccl.git && \
     mkdir -p /usr/local/include/external/nccl_archive/src && \
     ln -s /usr/local/include/nccl.h /usr/local/include/external/nccl_archive/src/nccl.h
 
-# Build optimized tensorflow-serving and install
-ENV TENSORFLOW_SERVING_VERSION 1.3.0
+# Build optimized tensorflow and install
+ENV TENSORFLOW_VERSION v1.3.0
 ENV CI_BUILD_PYTHON python
 ENV LD_LIBRARY_PATH /usr/local/cuda/extras/CUPTI/lib64:$LD_LIBRARY_PATH
 ENV TF_NEED_CUDA 1
 ENV TF_CUDA_COMPUTE_CAPABILITIES=3.0,3.5,5.2,6.0,6.1
 RUN cd /opt && \
-    git clone --recurse-submodules https://github.com/tensorflow/serving && \
-    cd serving && \
-    git checkout tags/$TENSORFLOW_SERVING_VERSION && \
+    git clone https://github.com/tensorflow/tensorflow && \
     cd tensorflow && \
+    git checkout tags/$TENSORFLOW_VERSION && \
     tensorflow/tools/ci_build/builds/configured GPU && \
-    cd .. && \
-    pip install numpy grpcio && \
-    bazel build -c opt \
-                --config=cuda \
-                --crosstool_top=@local_config_cuda//crosstool:toolchain \
-        tensorflow_serving/... && \
-    cp bazel-bin/tensorflow_serving/model_servers/tensorflow_model_server /usr/local/bin/ && \
-    bazel clean --expunge
+    pip install numpy && \
+    bazel build -c opt --copt=-mavx \
+                       --copt=-mavx2 \
+                       --copt=-mfma \
+                       --copt=-mfpmath=both \
+                       --copt=-msse4.2 \
+                       --copt=-msse4.1 \
+                       --config=cuda \
+        //tensorflow/tools/pip_package:build_pip_package && \
+    bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg && \
+    pip install --upgrade pip && \
+    pip install --upgrade /tmp/tensorflow_pkg/tensorflow-*.whl && \
+    bazel clean --expunge && \
+    rm -Rf /opt/tensorflow
