--- a/python3.6-tensorflow-gpu/Dockerfile
+++ b/python3.6-tensorflow-gpu/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6
+FROM triage/python3.6-bazel-gpu
 
 RUN pip install --upgrade pip && \
     pip install --upgrade tensorflow-gpu==1.3.0
