--- a/tensorflow-serving/python2.7-tensorflow-serving-optimized/Dockerfile
+++ b/tensorflow-serving/python2.7-tensorflow-serving-optimized/Dockerfile
@@ -2,11 +2,14 @@ FROM triage/python2.7-bazel
 
 # Build optimized tensorflow-serving and install
 ARG TENSORFLOW_SERVING_VERSION
+ARG TENSORFLOW_VERSION
 RUN cd /opt && \
-    git clone --recurse-submodules https://github.com/tensorflow/serving && \
+    git clone https://github.com/tensorflow/serving && \
     cd serving && \
     git checkout tags/$TENSORFLOW_SERVING_VERSION && \
+    git submodule update --init --recursive && \
     cd tensorflow && \
+    git checkout tags/v$TENSORFLOW_VERSION && \
     tensorflow/tools/ci_build/builds/configured CPU && \
     cd .. && \
     pip install numpy grpcio && \
