--- a/tensorflow-serving/python2.7-tensorflow-serving/Dockerfile
+++ b/tensorflow-serving/python2.7-tensorflow-serving/Dockerfile
@@ -1,15 +1,10 @@
-FROM triage/python2.7-bazel
+FROM python:2.7
 
 # Build optimized tensorflow-serving and install
 ARG TENSORFLOW_SERVING_VERSION
-RUN cd /opt && \
-    git clone --recurse-submodules https://github.com/tensorflow/serving && \
-    cd serving && \
-    git checkout tags/$TENSORFLOW_SERVING_VERSION && \
-    cd tensorflow && \
-    tensorflow/tools/ci_build/builds/configured CPU && \
-    cd .. && \
-    pip install numpy grpcio && \
-    bazel build -c opt tensorflow_serving/... && \
-    cp bazel-bin/tensorflow_serving/model_servers/tensorflow_model_server /usr/local/bin/ && \
-    bazel clean --expunge
+RUN echo "deb [arch=amd64] http://storage.googleapis.com/tensorflow-serving-apt stable tensorflow-model-server tensorflow-model-server-universal" | tee /etc/apt/sources.list.d/tensorflow-serving.list  && \
+    curl https://storage.googleapis.com/tensorflow-serving-apt/tensorflow-serving.release.pub.gpg | apt-key add - && \
+    apt-get -y update && \
+    apt-get -y install tensorflow-model-server=$TENSORFLOW_SERVING_VERSION && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
